# BebopS

./: BebopS  CMakeLists.txt  README.md  package.xml
include/bebop_simulator/: pos_controller.h  pos_controller_2.h  pos_controller_3.h
launch/: original.launch  respawn_bebop.launch  sintonizacion_1.launch  sintonizacion_2.launch  sintonizacion_3.launch  tarea_1.launch  tarea_2.launch  tarea_3.launch
msg/: AttitudeController.msg  Control.msg  PosController.msg  ReferenceAngles.msg
resource/: controller_bebop.yaml  controller_bebop_des.yaml  controller_bebop_des_launcher.yaml  controller_bebop_launcher.yaml  controller_bebop_stc.yaml  controller_bebop_stc_launcher.yaml  trayectoria.txt
scripts/: plot.py  plot_2.py  plot_3.py
src/nodes/: csv_control.cpp  csv_odometry.cpp  launcher.cpp  launcher_2.cpp  launcher_3.cpp  pos_controller_node.cpp  pos_controller_node.h  pos_controller_node_2.cpp  pos_controller_node_2.h  pos_controller_node_3.cpp  pos_controller_node_3.h  waypoint_example.cpp  waypoint_gen.cpp
worlds/: max_update_rate_0.world
